# needletail

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  circle.yml  needletail.pyi  pyproject.toml  rustfmt.toml  test_python.py
.circleci/: config.yml
.github/workflows/: release.yml  tests.yml
bench/: benchmark.c  benchmark.py  benchmark.rs  benchmark_biopython.py
benches/: benchmark.rs
examples/: stdin_pipe.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_fasta.rs  parse_fastq.rs
python/: TODO.txt  sniffer.py  test_sniffer.py
rust/: Cargo.toml
rust/src/: fastx.rs  kmer.rs  lib.rs
src/: bitkmer.rs  buffer.rs  errors.rs  fastx.rs  kmer.rs  lib.rs  python.rs  quality.rs  seq.rs  sequence.rs  sequence_record.rs  util.rs
src/formats/: buffer.rs  fasta.rs  fastq.rs  mod.rs  validation.rs
src/parser/: fai.rs  fasta.rs  fastaqual.rs  fastq.rs  mod.rs  record.rs  utils.rs
tests/: format_specimens.rs  test_compressed.rs  test_faidx.rs  test_stdin.rs
tests/data/: 28S.fasta  PRJNA271013_head.fq  bad_fai.fa  bad_fai.fa.fai  bad_header.fastq  bad_test.fa  random_tsv.fq  test.fa.bz2  test.fa.xz  test.fa.zst  test_index.fa  test_index.fa.fai
tests/specimen/: LICENSE.md
tests/specimen/FASTA/: P02456.fasta  aster.fasta  centaurea.fasta  elderberry.fasta  index.toml  lavender.fasta  loveliesbleeding.fasta  lupine.fasta  phlox.fasta  rose.fasta  rosemary.fasta  sweetpea.fasta  wisteria.fasta
tests/specimen/FASTQ/: index.toml
