[package]
name = "needletail"
version = "0.4.0"
authors = ["Roderick Bovee <rbovee@gmail.com>", "Vincent Prouillet <vincent@onecodex.com>"]
description = "FASTX parsing and k-mer methods"
keywords = ["FASTA", "FASTQ", "kmer", "bioinformatics"]
categories = ["science", "parsing"]
repository = "https://github.com/onecodex/needletail"
license = "MIT"
readme = "./README.md"
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[lib]
crate-type=["cdylib", "rlib"]
bench = false

[features]
default = ["compression"]
compression = ["bzip2", "flate2", "xz2"]
python = ["pyo3/extension-module"]
python_test = ["pyo3"]

[dependencies]
flate2 = { version="1.0.6", optional=true }
bzip2 = { version="0.3.3", optional=true }
xz2 = { version="0.1.6", optional=true }
pyo3 = { version = "0.11", optional = true }
memchr = "2.2.1"
bytecount = {version = "0.6", features = ["runtime-dispatch-simd"]}
buf_redux = { version = "0.8", default_features = false }

[dev-dependencies]
criterion = "0.3"

# for stdin test
escargot = "0.5.0"
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3"

# for benchmark comparisons
bio = "0.31"
seq_io = "0.3"

# for testing with the FormatSpecimens.jl repo samples
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"

[profile.release]
lto = true

[[bench]]
name = "benchmark"
harness = false
