[package]
name = "needletail"
version = "0.4.1"
authors = ["Roderick Bovee <rbovee@gmail.com>", "Vincent Prouillet <vincent@onecodex.com>"]
description = "FASTX parsing and k-mer methods"
keywords = ["FASTA", "FASTQ", "kmer", "bioinformatics"]
categories = ["science", "parsing"]
repository = "https://github.com/onecodex/needletail"
license = "MIT"
readme = "./README.md"
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[lib]
crate-type=["cdylib", "rlib"]
bench = false

[features]
default = ["compression"]
compression = ["bzip2", "flate2", "xz2"]
python = ["pyo3/extension-module"]
python_test = ["pyo3"]

[dependencies]
flate2 = { version="1.0.6", optional=true }
bzip2 = { version="0.4", optional=true }
xz2 = { version="0.1.6", optional=true }
pyo3 = { version = "0.13", optional = true }
memchr = "2.2.1"
bytecount = {version = "0.6", features = ["runtime-dispatch-simd"]}
buf_redux = { version = "0.8", default_features = false }

[dev-dependencies]
criterion = "0.3"

# for stdin test
escargot = "0.5.0"
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3"

# for benchmark comparisons
bio = "0.33"
seq_io = "0.3"

# for testing with the FormatSpecimens.jl repo samples
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"

[profile.release]
lto = true

[package.metadata.maturin]
classifier = ["Intended Audience :: Science/Research", "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Topic :: Scientific/Engineering :: Bio-Informatics"]

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"
